--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta property="og:image" content="https://i.kym-cdn.com/photos/images/newsfeed/000/768/771/246.gif">
+    <meta property="og:image" content="https://c.tenor.com/rfe0Y-S_7UwAAAAd/dark-souls-dark-souls2.gif">
     <meta property="og:type" content="video.other">
     <meta property="og:video:url" content="https://www.youtube.com/watch?v=IMhq6usln-8">
     <meta property="og:video:width" content="1280">
