--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta property="og:image" content="https://c.tenor.com/rfe0Y-S_7UwAAAAd/dark-souls-dark-souls2.gif">
     <meta property="og:type" content="video.other">
-    <meta property="og:video:url" content="https://www.youtube.com/watch?v=IMhq6usln-8">
+    <meta property="og:video:url" content="https://www.youtube.com/embed/watch?v=IMhq6usln-8">
     <meta property="og:video:width" content="1280">
     <meta property="og:video:height" content="720">
   </head>
